8223305: Compiler support for Switch Expressions
Reviewed-by: mcimadamore, vromero